Fixes flickering at applet mainview opening in outprocess mode

--- a/controlpanel/theme/style/duicontrolpanel.css
+++ b/controlpanel/theme/style/duicontrolpanel.css
@@ -10,4 +10,13 @@ MApplicationWindowStyle#ControlPanel {
     background-image: "meegotouch-applicationpage-portrait-background-inverted";
 }
 
+MWindowStyle {
+    x11-startup-pixmap: ;
+    startup-fill-color: ;
+}
+
+MWindowStyle.Landscape {
+    x11-startup-pixmap: ;
+    startup-fill-color: ;
+}
 
